[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "garmin-coach-mcp-server"
version = "0.2.0"
description = "MCP Server for Garmin Connect — read activities, health data, and push training plans from any AI assistant"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "mau240987" }
]
keywords = [
    "mcp",
    "model-context-protocol",
    "garmin",
    "garmin-connect",
    "fitness",
    "training",
    "running",
    "ai",
    "claude",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]
dependencies = [
    "mcp>=1.0.0",
    "garminconnect>=0.3.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/mau240987/garmin-mcp-server"
Repository = "https://github.com/mau240987/garmin-mcp-server"
Issues = "https://github.com/mau240987/garmin-mcp-server/issues"

[project.scripts]
garmin-mcp-server = "garmin_mcp_server:main"

[tool.hatch.build.targets.wheel]
# Single-module package
only-include = ["garmin_mcp_server.py"]

[tool.hatch.build.targets.sdist]
include = [
    "garmin_mcp_server.py",
    "README.md",
    "LICENSE",
    "requirements.txt",
]
